WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272880
[UnifiedPDF] Resizing a slow-rendering PDF, wedges all cores for tens of minutes
https://bugs.webkit.org/show_bug.cgi?id=272880
Summary
[UnifiedPDF] Resizing a slow-rendering PDF, wedges all cores for tens of minutes
Simon Fraser (smfr)
Reported
2024-04-17 21:36:40 PDT
Too much async rendering!
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2024-04-17 21:36:53 PDT
<
rdar://126213078
>
Simon Fraser (smfr)
Comment 2
2024-04-17 21:37:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27433
EWS
Comment 3
2024-04-23 08:04:29 PDT
Committed
277868@main
(9f717e3bb0d1): <
https://commits.webkit.org/277868@main
> Reviewed commits have been landed. Closing PR #27433 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug